frontend/src/index.scss
/* ... */
.file-menu {
    margin-top: 1em;
    padding-top: 1em;
    border-top: 1px solid var(--faint-contrast);

    display: flex;
    flex-direction: column;
    gap: .7em 1em;
    a {
        display: flex;
        align-items: flex-start;
        label {
            cursor: pointer;
            margin-top: .1em;
            small { display: block }
        }
        .icon { margin-right: 0.5em; }
        &:hover { @extend .highlightedText }
    }
}

.unauthorized { text-align: center }

#clipBar {
    position: sticky; bottom: 0;
    background: var(--bg);
    box-shadow: 0 0 .3em .3em var(--bg);

    display: flex; align-items: center; gap: 0.5em;
    margin: 0 1px;
}
#clipboard-content {
    text-align: left;
    li:first-of-type { margin-top: .5em }
}

#focus-typing {
    position: fixed;
    top: 0;
    right: 0;
    background: var(--bg);
    z-index: 3;
    padding: .1em .5em;
    border: 1px solid currentColor;
    margin: -1px;
}
.focus-typing-mismatch {
    color: var(--error);
}

.tiles-mode {
    max-width: none;
    @media (min-width: 42em) {
        margin: 0 1em;
    }
    --tile-size: 5;
    --name-lines: 3;
    --name-height: calc(4.7em + var(--tile-size) * .4em + 1.2em * var(--name-lines));
    --tile-width: calc(5em + 1em * var(--tile-size));

    ul.dir {
        display: grid;
        grid-template-columns: repeat(auto-fill, minmax(var(--tile-width),1fr));
        grid-auto-rows: calc(var(--name-height) + 1.3em);
        gap: 0 20px;

        li {
            text-align: center;
            position: relative;
            display: flex;
            flex-direction: column;
            border-bottom: none;
            overflow-x: clip;
            padding: .5em 0 0;

            .link-wrapper {
                &:not(:hover) {
                    max-height: var(--name-height);
                    display: block;
                    display: -webkit-box;
                    overflow: hidden;
                    -webkit-line-clamp: calc(var(--name-lines) + 1); // + icon's line
                    -webkit-box-orient: vertical;
                }
                a {
                    &:last-of-type { padding: 0; }
                    span { display: block; }
                    .icon.icon { font-size: calc(1.2rem + .6rem * var(--tile-size)); }
                    img.icon, video.icon {
                        width: auto;
                        height: 1em;
                        padding: 0.1em 0;
                    }
                    .icon {
                        font-size: 4rem;
                        display: block;
                        margin: auto; // good for both font and img icons
                    }
                }

                &:hover {
                    overflow: visible;
                    display: block;
                    z-index: 1;
                    .icon::before { text-decoration: none; }
                }
            }
            .link-wrapper:hover {
                padding: 0; margin: 0;
            }
            &:nth-of-type(odd) {
                background-color: inherit; // to avoid checkerboard effect
            }
            .entry-panel {
                justify-content: center;
                font-size: 10pt;
            }
            .entry-details {
                font-size: 80%;
            }
            &.page-separator::before {
                content: '';
            }
            input[type=checkbox] {
                margin: 0;
                position: absolute;
                top: 0.3em;
                right: 1em;
            }

            .link-wrapper a { display:inline } // avoid overlapping name and details
            &:hover {
                --bg: var(--ghost-contrast-alt);
                background: var(--bg); // highlight whole tile
                .link-wrapper, .entry-panel {
                    z-index: 1; background: var(--bg); // cover underlying elements of other tiles, in case it's overflowing
                }
                input[type=checkbox] { z-index: 2; } // over link-wrapper, but not over header
                .entry-panel {
                    padding-bottom: 0.3em;
                }
            }
            .entry-comment {
                max-height: 1.2em;
                overflow: hidden;
                margin: 0;
                &:hover {
                    max-height: none;
                    overflow: auto;
                }
            }
        }
    }
    .entry-size::after {
        content: none;
    }
    .entry-ts { display: none; }
    .popup-menu-button {
        position: absolute;
        top: 0;
        left: 0;
    }
    #filter-bar {
        margin-bottom: 1em;
    }
    #paging { z-index: 1 } // avoid being covered by hovered elements

}
/* ... */

